test/pass/api/hash/hash_delete.lly
var v = [1 => [1], 2 => [2], 3 => [3]]

v.delete(1)
v.delete(2)
v.delete(3)

if v != []:
    stderr.print("Failed.")

v.delete(-1)

v = [1 => [1], 2 => [2], 3 => [3]]

v.delete(3)
v.delete(1)
v.delete(2)

if v != []:
    stderr.print("Failed.")
